--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,17 @@
 # Conexão para Postgres
- spring.datasource.url=jdbc:postgresql://localhost:5432/bibi?useSSL=false
-spring.datasource.username=postgres
- spring.datasource.password=oreki
- spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto = update
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+
+#spring.datasource.url=jdbc:postgresql://localhost:5432/SeuBanco?useSSL=false
+#spring.datasource.username=postgres
+#spring.datasource.password=SuaSenha
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto = update
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
 # Conexão para Mysql
-#spring.datasource.url=jdbc:mysql://localhost:3306/bibi?useSSL=false
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/SeuBanco?useSSL=false
 #spring.datasource.username=root
-#spring.datasource.password=
+#spring.datasource.password=SuaSenha
 #spring.datasource.tomcat.test-while-idle=true
 #spring.datasource.tomcat.validation-query=SELECT 1
 #spring.jpa.show-sql=true
